20191028:
- Customizable window size
- Add 4 more colors (now contains 10 colors)

20190707:
- Add options page
- Add Right-click to remove/add keywords

20190609:
- Add "paste keywords to new pages" mode

20190503:
- Minimize extension size

20190110:
- Highlight any strings (not just full word)
- Add Instant Search (highlight on-the-fly)
- Add customizable delimiter
- Make Highlight Words individual to each tab
- UI changes
- Add Ctrl+Shift+F as default shortcut

20181231:
- Organize code
- Change UI (based on Multi-Highlight)
- Change extension icon

*This extension is open-source.