@@ -20,7 +20,7 @@
   },
   "content_scripts": [ {
       "matches": [ "<all_urls>" ],
-      "js": [ "jquery/jquery.js", "jquery/jquery.highlight.js", "popup.js" ],
+      "js": [ "jquery/jquery.js", "jquery/jquery.highlight.js", "popup.js", "getPagesSource.js"  ],
       "css": [ "highlight.css" ]
    } ],
   "background": {
